--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
 *{
 	font-family: 'Roboto', sans-serif !important;
 }
+
+
+@media only screen and (max-width: 700px) {
+    #backgorund-cerrado{
+        padding-left: 0.5em !important;
+        padding-right: 0.5em !important;
+    }
+}
