--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,13 @@
 
 
 @media only screen and (max-width: 700px) {
-    #backgorund-cerrado{
+    #backgorund-cerrado,
+    .backgorund-cerrado{
         padding-left: 0.5em !important;
         padding-right: 0.5em !important;
     }
+}
+
+h1{
+	font-weight: 700 !important;
 }
